--- a/modal.css
+++ b/modal.css
@@ -16,7 +16,8 @@ body {
   margin: 0;
   display: flex;
   flex-direction: column;
-  background-image: url("background.png");
+  /* ??? */
+  /* background-image: url("background.png"); */
   font-family: var(--font-default);
   font-size: 18px;
   max-width: 1300px;
@@ -33,9 +34,17 @@ img {
 }
 
 .topnav {
+  /* Défaut d'alignement */
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  /***********************/
   overflow: hidden;
   margin: 3.5%;
 }
+
+
 
 .header-logo {
   float: left;
@@ -73,7 +82,9 @@ img {
   display: none;
 }
 
-@media screen and (max-width: 768px) {
+/* BreakPoint à 820px au lieu de 768px pour éviter l'affichage de 
+.main-navbar sur 2 lignes */
+@media screen and (max-width: 820px) {
   .topnav a {
     display: none;
   }
@@ -82,9 +93,10 @@ img {
     float: right;
     display: block;
   }
-}
 
-@media screen and (max-width: 768px) {
+  /* }
+
+@media screen and (max-width: 820px) { */
   .topnav.responsive {
     position: relative;
   }
@@ -93,6 +105,8 @@ img {
     position: absolute;
     right: 0;
     top: 0;
+    /* Fixe la couleur de l'icône (passe en noir si autre lien est sélectionné) */
+    color: #fff;
   }
 
   .topnav.responsive a {
@@ -100,9 +114,19 @@ img {
     display: block;
     text-align: left;
   }
+
+  /* Fixe position de la navbar à droite + fond pour faire ressortir les liens */
+  .main-navbar {
+    z-index: 2;
+    position: fixed;
+    top: 20px;
+    right: 3%;
+    background: rgba(255, 255, 255, 0.5);
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
+    border-radius: 20px;
+  }
 }
-
-
 
 @media screen and (max-width: 540px) {
   .topnav a {
@@ -112,7 +136,8 @@ img {
   .topnav a.icon {
     float: right;
     display: block;
-    margin-top: -15px;
+    /* Défaut d'aligement */
+    /* margin-top: -15px; */
   }
 }
 
@@ -126,8 +151,6 @@ main {
   margin: 1px 20px 15px;
   border-radius: 2rem;
   text-align: justify;
-
-
 }
 
 .modal-btn {
@@ -183,7 +206,7 @@ main {
 .bground {
   display: none;
   position: fixed;
-  z-index: 1;
+  z-index: 3;
   left: 0;
   top: 0;
   height: 100%;
@@ -541,6 +564,13 @@ input[data-error]::after {
   white-space: nowrap;
 }
 
+/* Evite le débordement du texte */
+@media screen and (max-width:960px) {
+  .hero-headline {
+    white-space: normal;
+  }
+}
+
 .hero-text {
   width: 146%;
   font-weight: normal;
@@ -566,6 +596,8 @@ input[data-error]::after {
   height: 100%;
   display: block;
   padding: 0;
+  /* Correction d'affichage (image déformée) */
+  object-fit: cover;
 }
 
 .copyrights {
