--- a/modal.css
+++ b/modal.css
@@ -82,64 +82,9 @@ img {
   display: none;
 }
 
-/* BreakPoint à 820px au lieu de 768px pour éviter l'affichage de 
-.main-navbar sur 2 lignes */
-@media screen and (max-width: 820px) {
-  .topnav a {
-    display: none;
-  }
 
-  .topnav a.icon {
-    float: right;
-    display: block;
-  }
 
-  /* }
 
-@media screen and (max-width: 820px) { */
-  .topnav.responsive {
-    position: relative;
-  }
-
-  .topnav.responsive .icon {
-    position: absolute;
-    right: 0;
-    top: 0;
-    /* Fixe la couleur de l'icône (passe en noir si autre lien est sélectionné) */
-    color: #fff;
-  }
-
-  .topnav.responsive a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
-
-  /* Fixe position de la navbar à droite + fond pour faire ressortir les liens */
-  .main-navbar {
-    z-index: 2;
-    position: fixed;
-    top: 20px;
-    right: 3%;
-    background: rgba(255, 255, 255, 0.5);
-    backdrop-filter: blur(5px);
-    -webkit-backdrop-filter: blur(5px);
-    border-radius: 20px;
-  }
-}
-
-@media screen and (max-width: 540px) {
-  .topnav a {
-    display: none;
-  }
-
-  .topnav a.icon {
-    float: right;
-    display: block;
-    /* Défaut d'aligement */
-    /* margin-top: -15px; */
-  }
-}
 
 main {
   font-size: 130%;
@@ -540,7 +485,7 @@ input[data-error]::after {
   color: #fff;
   position: relative;
   text-align: left;
-  min-width: 424px;
+  /* min-width: 424px; */
 }
 
 .hero-content::after {
@@ -564,12 +509,8 @@ input[data-error]::after {
   white-space: nowrap;
 }
 
-/* Evite le débordement du texte */
-@media screen and (max-width:960px) {
-  .hero-headline {
-    white-space: normal;
-  }
-}
+
+
 
 .hero-text {
   width: 146%;
@@ -616,6 +557,67 @@ footer {
   padding-left: 2vw;
   padding-right: 2vw;
   margin: 0 20px;
+}
+
+@keyframes modalopen {
+  from {
+    opacity: 0;
+    transform: translateY(-150px);
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+/* Evite le débordement du texte */
+@media screen and (max-width:960px) {
+  .hero-headline {
+    white-space: normal;
+  }
+}
+
+/* BreakPoint à 820px au lieu de 768px pour éviter l'affichage de 
+.main-navbar sur 2 lignes */
+@media screen and (max-width: 820px) {
+  .topnav a {
+    display: none;
+  }
+
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+
+  .topnav.responsive {
+    position: relative;
+  }
+
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+    /* Fixe la couleur de l'icône (passe en noir si autre lien est sélectionné) */
+    color: #fff;
+  }
+
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+
+  /* Fixe position de la navbar à droite + fond pour faire ressortir les liens */
+  .main-navbar {
+    z-index: 2;
+    position: fixed;
+    top: 20px;
+    right: 3%;
+    background: rgba(255, 255, 255, 0.5);
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
+    border-radius: 20px;
+  }
 }
 
 @media screen and (max-width: 800px) {
@@ -665,13 +667,33 @@ footer {
   }
 }
 
-@keyframes modalopen {
-  from {
-    opacity: 0;
-    transform: translateY(-150px);
+@media screen and (max-width: 540px) {
+  .topnav a {
+    display: none;
   }
 
-  to {
-    opacity: 1;
+  .topnav a.icon {
+    float: right;
+    display: block;
+    /* Défaut d'aligement */
+    /* margin-top: -15px; */
+  }
+}
+
+/* Nouveau breakpoint pur les "petits" écrans  */
+@media screen and (max-width:470px) {
+  .hero-headline {
+    font-size: 3rem;
+    width: 100%;
+    text-align: center;
+  }
+
+  .hero-text {
+    width: 100%;
+    font-size: 1rem;
+  }
+
+  .header-logo img {
+    width: 80%;
   }
 }
